<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_15"
    android:columnCount="2">

    <TextView android:text="@string/id" />

    <TextView
        android:id="@+id/text_id"
        android:layout_marginStart="@dimen/dp_15" />

    <TextView android:text="@string/node_id" />

    <TextView
        android:id="@+id/text_node_id"
        android:layout_marginStart="@dimen/dp_15" />

    <TextView android:text="@string/repo_name" />

    <TextView
        android:id="@+id/text_name"
        android:layout_marginStart="@dimen/dp_15" />

    <TextView android:text="@string/isPrivate" />

    <TextView
        android:id="@+id/text_private"
        android:layout_marginStart="@dimen/dp_15" />

    <TextView android:text="@string/owner_id" />

    <TextView
        android:id="@+id/text_owner_id"
        android:layout_marginStart="@dimen/dp_15" />

    <TextView android:text="@string/html_url" />

    <TextView
        android:id="@+id/text_html_url"
        android:layout_marginStart="@dimen/dp_15" />

    <TextView android:text="@string/description" />

    <TextView
        android:id="@+id/text_description"
        android:layout_marginStart="@dimen/dp_15" />

</GridLayout>